add storage doamin with its tests
